# MosaBackEnd

./: .firebaserc  .gitignore  API定義書.md  README.md  docker-compose.yml
.metals/: metals.lock.db
R/: Dockerfile  api.R  script.R
cpp/: Dockerfile  main.cpp
cpp/myapp/: .gitignore  CMakeLists.txt  config.json  main.cc
cs/: Dockerfile  Program.cs
cs/api/: Group.cs  GroupController.cs  GroupService.cs  Guid.cs  Like.cs  LikeController.cs  LikeService.cs  Program.cs  api.csproj  appsettings.json
dart/: README.md  pubspec.yaml
db/init/: init.sql
elixir/: .gitignore  Dockerfile  README.md  mix.exs
elixir/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
elixir/lib/: myapp_web.ex
functions/: index.js  package-lock.json  package.json
go/: Dockerfile  go.mod  go.sum  main.go
go/cruds/: cruds.go
java/: Dockerfile  Main.java
kotlin/: build.gradle.kts
php/: Dockerfile  api.php
python/: .gitignore  Dockerfile  Pipfile  main.py
ruby/: Dockerfile  Gemfile  docker-compose.yml  main.rb
rust/: Cargo.toml  Dockerfile
rust/src/: lib.rs  main.rs
rust/src/cruds/: group.rs  mod.rs  post.rs
rust/src/db/: database.rs
rust/src/handler/: group.rs  health.rs  mod.rs  post.rs
rust/src/models/: following.rs  groups.rs  invite_groups.rs  likes.rs  mod.rs  posts.rs  prelude.rs  replies.rs  rooms.rs  users.rs  users_groups.rs
rust/src/schemas/: group.rs  mod.rs  post.rs
scala/: Dockerfile  skinny  skinny.bat
swift/: Package.swift  docker-compose.yml
typescript/: Dockerfile  index.ts  main.ts  package-lock.json  package.json  tsconfig.json
(+83 files in other folders)
