[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dotenv = "0.15.0"
sea-orm = { version = "0.11.3", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros" ] }
serde = { version = "1.0.163", features = ["derive"] }
uuid = { version = "1.3.3", features = ["v4"] }
serde_json = "1.0.91"
chrono = "0.4.18"
